change the app name, made the home overflow and fix gitignore

--- a/front-ar-maps/src/assets/css/app.css
+++ b/front-ar-maps/src/assets/css/app.css
@@ -98,6 +98,13 @@
     height: 100%;
 }
 
+#home .bottom{
+    height: 70%;
+    width: 100%;
+    padding-top: 2rem;
+    overflow-y: auto;
+}
+
 #home .bottom .btn-holder{
     margin-top: 5rem;
  
@@ -106,12 +113,6 @@
 #home .bottom .btn-holder .btn{
     padding: 0.5rem 5rem;
     border-radius: 2rem;
-}
-
-#home .bottom{
-    height: 70%;
-    width: 100%;
-    padding-top: 2rem;
 }
 
 
